--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                     <i class="bx bx-x"></i>
                 </div>
                 <ul class="nav_list">
-                    <li class="nav_item"><a href="home" class="nav_link active">Home</a></li>
-                    <li class="nav_item"><a href="about" class="nav_link">About</a></li>
-                    <li class="nav_item"><a href="works" class="nav_link">Works</a></li>
-                    <li class="nav_item"><a href="contact" class="nav_link">Contact</a></li>
+                    <li class="nav_item"><a href="#home" class="nav_link active">Home</a></li>
+                    <li class="nav_item"><a href="#about" class="nav_link">About</a></li>
+                    <li class="nav_item"><a href="#works" class="nav_link">Works</a></li>
+                    <li class="nav_item"><a href="#contact" class="nav_link">Contact</a></li>
                 </ul>
             </div>
         </nav>
