Nav opens and closes properly

--- a/index.html
+++ b/index.html
@@ -35,6 +35,27 @@
     </header>
 
     <main class="1-main">
+        <!-- home -->
+        <section class="home" id="home"></section>
+            <div class="home_container bd-grid">
+                <div class="home_data">
+                    <div class="home_img">
+                        <img src="assets/img/ProfilePicture.png" alt="">
+                    </div>
+
+                    <h1 class="home_title">Eric Giron</h1>
+                    <span class="home_profession">Aspiring Software Developer</span>
+
+                    <div class="home_social">
+                        <a href="#" class="home_social-link"><i class="bx bxl-linkedin"></i></a>
+                        <a href="#" class="home_social-link"><i class="bx bxl-github"></i></a>
+                        <a href="#" class="home_social-link"><i class="bx bxl-twitter"></i></a>
+                        <a href="#" class="home_social-link"><i class="bx bxl-instagram"></i></a>
+                    </div>
+
+                    <a href="#" download="" class="button home_button">Download Resume</a>
+                </div>
+            </div>
 
     </main>
 
