Added detail to About section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <main class="1-main">
         <!-- home -->
-        <section class="home" id="home"></section>
+        <section class="home" id="home">
             <div class="home_container bd-grid">
                 <div class="home_data">
                     <div class="home_img">
@@ -56,7 +56,29 @@
                     <a href="#" download="" class="button home_button">Download Resume</a>
                 </div>
             </div>
+        </section>
 
+        <section class="about section" id="about">
+            <span class="section-subtitle">Intro</span>
+            <h2 class="section-title">About Me</h2>
+
+            <div class="about_container bd-grid">
+                <div class="about_data">
+                    <p class="about_description">Hello, I'm a current student in the UNLV Software Development Bootcamp. I want to become a Software Developer that can handle both Front-End and Back-End. As of right now, I can handle HTML, CSS, and JavaScript. Take a look at some of my work below and feel free to contact me.</p>
+                    <img src="assets/img/about.JPG" alt="">
+                </div>
+
+                <div class="about_information">
+                    <h3 class="about_information-title">Information</h3>
+
+                    <div class="about_information-data">
+                        <i class="bx bx-user about_information-icon"></i>
+                        <span>Eric Giron</span>
+                    </div>
+                </div>
+
+            </div>
+        </section>
     </main>
 
 
