Added more content to HTML and CSS clean-up

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="home_container bd-grid">
                 <div class="home_data">
                     <div class="home_img">
-                        <img src="assets/img/ProfilePicture.png" alt="">
+                        <img src="assets/img/ProfilePicture.png" alt="My Profile Picture">
                     </div>
 
                     <h1 class="home_title">Eric Giron</h1>
@@ -65,18 +65,57 @@
             <div class="about_container bd-grid">
                 <div class="about_data">
                     <p class="about_description">Hello, I'm a current student in the UNLV Software Development Bootcamp. I want to become a Software Developer that can handle both Front-End and Back-End. As of right now, I can handle HTML, CSS, and JavaScript. Take a look at some of my work below and feel free to contact me.</p>
-                    <img src="assets/img/about.JPG" alt="">
+                    <img src="assets/img/about.JPG" alt="My About Picture" class="about_img">
                 </div>
 
-                <div class="about_information">
-                    <h3 class="about_information-title">Information</h3>
-
-                    <div class="about_information-data">
-                        <i class="bx bx-user about_information-icon"></i>
-                        <span>Eric Giron</span>
                     </div>
                 </div>
 
+            </div>
+        
+        </section>
+        
+        <section class="works section" id="works">
+            <span class="section-subtitle">My Portfolio</span>
+            <h2 class="section-title">Recent Projects</h2>
+
+            <div class="works_container bd-grid">
+                <div class="works_data">
+                    <div class="works_img">
+                        <img src="assets/img/Githubimg.png" alt="Github Logo link to this page's repo" class="works_img-one">
+                    </div>
+                    <a href="https://github.com/EricLGDev/Mobile-first-portfolio" class="button github-button">Visit this page's repo</a>
+                </div>                
+            </div>
+        </section>
+
+        <section class="contact section" id="contact">
+            <span class="section-subtitle">Contact Information</span>
+            <h2 class="section-title">Reach Out</h2>
+
+            <div class="contact_container bd-grid">
+                    <form action="" class="contact_form">
+                        <div class="contact_inputs">
+                            <input type="text" placeholder="Name" class="contact_input">
+                            <input type="mail" placeholder="Email" class="contact_input">
+                        </div>
+
+                        <input type="text" placeholder="Project" class="contact_input">
+
+                        <textarea name="" id="" cols="0" rows="10" placeholder="Message" class="contact_input"></textarea>
+
+                        <input type="submit" value="Send Message" class="button contact_button">
+                    </form>
+
+                    <div class="contact_info">
+                        <h3 class="contact_subtitle">Email</h3>
+                        <span class="contact_text">ericlg.link@gmail.com</span>
+                    </div>
+
+                    <div class="contact_info">
+                        <h3 class="contact_subtitle">Location</h3>
+                        <span class="contact_text">Las Vegas, NV</span>
+                    </div>
             </div>
         </section>
     </main>
