--- a/index.html
+++ b/index.html
@@ -122,7 +122,19 @@
 
 
     <!-- footer -->
+    <footer class="footer section">
+        <div class="footer_container bd-grid">
+            <h1 class="footer_title">Thanks for stopping by</h1>
+            <p class="footer_description">I am Eric and this is my personal website, feel free to consult me here on my socials</p>
 
+            <div class="footer_social">
+                <a href="#" class="footer_social"><i class="bx bxl-linkedin"></i> </a>
+                <a href="#" class="footer_social"><i class="bx bxl-github"></i> </a>
+                <a href="#" class="footer_social"><i class="bx bxl-twitter"></i> </a>
+                <a href="#" class="footer_social"><i class="bx bxl-instagram"></i> </a>
+            </div>
+        </div>
+    </footer>
     <!-- main js -->
     <script src="assets/js/main.js"></script>
 </body>
