Added a pretty sweet dark mode function

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                     <li class="nav_item"><a href="#about" class="nav_link">About</a></li>
                     <li class="nav_item"><a href="#works" class="nav_link">Works</a></li>
                     <li class="nav_item"><a href="#contact" class="nav_link">Contact</a></li>
+                    <li class="nav_item dark_mode"><button onclick="darkMode()"><i class="bx bx-moon"></i> </button></li>
                 </ul>
             </div>
         </nav>
@@ -44,7 +45,7 @@
                     </div>
 
                     <h1 class="home_title">Eric Giron</h1>
-                    <span class="home_profession">Aspiring Software Developer</span>
+                    <span class="home_profession"><strong> Aspiring Software Developer</strong></span>
 
                     <div class="home_social">
                         <a href="#" class="home_social-link"><i class="bx bxl-linkedin"></i></a>
