Added Linkedin and Github link to social

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                     <span class="home_profession"><strong> Aspiring Software Developer</strong></span>
 
                     <div class="home_social">
-                        <a href="#" class="home_social-link"><i class="bx bxl-linkedin"></i></a>
-                        <a href="#" class="home_social-link"><i class="bx bxl-github"></i></a>
+                        <a href="https://www.linkedin.com/in/eric-giron-079654212" class="home_social-link"><i class="bx bxl-linkedin"></i></a>
+                        <a href="https://github.com/EricLGDev" class="home_social-link"><i class="bx bxl-github"></i></a>
                         <a href="#" class="home_social-link"><i class="bx bxl-twitter"></i></a>
                         <a href="#" class="home_social-link"><i class="bx bxl-instagram"></i></a>
                     </div>
@@ -129,8 +129,8 @@
             <p class="footer_description">I am Eric and this is my personal website, feel free to consult me here on my socials</p>
 
             <div class="footer_social">
-                <a href="#" class="footer_social"><i class="bx bxl-linkedin"></i> </a>
-                <a href="#" class="footer_social"><i class="bx bxl-github"></i> </a>
+                <a href="https://www.linkedin.com/in/eric-giron-079654212" class="footer_social"><i class="bx bxl-linkedin"></i> </a>
+                <a href="https://github.com/EricLGDev" class="footer_social"><i class="bx bxl-github"></i> </a>
                 <a href="#" class="footer_social"><i class="bx bxl-twitter"></i> </a>
                 <a href="#" class="footer_social"><i class="bx bxl-instagram"></i> </a>
             </div>
